name:                compiler
version:             1.0.0.0
build-type:          Simple
cabal-version:       >=1.10

library:
  ghc-options: -optl-fuse-ld=gold
  ld-options:  -fuse-ld=gold

executable compiler
  ghc-options:         -optl-fuse-ld=gold
  ld-options:          -fuse-ld=gold
  default-language:    Haskell2010
  main-is:             main.hs
  other-modules:
    AbsCPP
    ErrM
    LexCPP
    ParCPP
    PrintCPP
    TypeChecker
    Auss
    Codegen
    CodegenTypes

  build-depends:
    base               >= 4.7 && < 5
    , llvm-hs		       >= 9.0.0 && < 10.0.0
    , llvm-hs-pure	   >= 9.0.0 && < 10.0.0
    , array
    , containers
    , mtl
    , utf8-string
    , bytestring
  hs-source-dirs:      .
